# autolang

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_automata.py  setup_cfg.py
examples/: dfa_examples.py  nfa_examples.py  pda_examples.py  regex_examples.py  tm_examples.py
logs/: changelog.md  progress_logs.md
src/autolang/: __init__.py
src/autolang/backend/: utils.py
src/autolang/backend/cfg/: cfg.py
src/autolang/backend/machines/: dfa.py  nfa.py  pda.py  settings_machines.py  structs_config.py  structs_transition.py  tm.py
src/autolang/backend/regex/: gnfa.py  nfa_to_dfa.py  regex_eliminate.py  regex_input.py  regex_to_dfa.py  regex_to_nfa.py
src/autolang/visuals/: dfa_visuals.py  display_diagrams.py  magic_chars.py  nfa_visuals.py  pda_visuals.py  render_diagrams.py  settings_visuals.py  tm_visuals.py  utils_visuals.py
tests/: test_dfa.py  test_gnfa.py  test_nfa.py  test_nfa_to_dfa.py  test_pda.py  test_regex_eliminate.py  test_regex_input.py  test_regex_to_nfa.py  test_structs_config.py  test_structs_transition.py  test_tm.py  test_utils.py
tests/backend/: test_utils.py
tests/backend/cfg/: test_cfg.py
tests/backend/machines/: test_dfa.py  test_nfa.py  test_pda.py  test_structs_transition.py  test_tm.py
tests/backend/regex/: test_gnfa.py  test_nfa_to_dfa.py  test_regex_eliminate.py  test_regex_input.py  test_regex_to_dfa.py  test_regex_to_nfa.py
tests/visuals/: test_dfa_visuals.py  test_display_diagrams.py  test_nfa_visuals.py  test_pda_visuals.py  test_render_diagrams.py  test_tm_visuals.py  test_utils_visuals.py
