[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autolang"
version = "0.2.0"
description = "A Python library for simulating finite automata, formal languages, and Turing machines."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name= "fawnium", email = "oisinlyons1@gmail.com"}
]
requires-python = ">=3.12"
# Earlier dependency versions will probably work, but these are the versions tested
dependencies = [
    "networkx>=3.5",
    "matplotlib>=3.10.7"
]

# Core dependencies may be moved here later
[project.optional-dependencies]
viz = []

[project.urls]
Homepage = "https://github.com/fawnium/autolang"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]